<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.co.viditkothari.storeinventory.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imgvout_product_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/thumbnail"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/ProductName"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_product_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Quantity"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Price"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_product_description"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:hint="@string/Description"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@+id/btn_product_delete"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_product_sale"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:gravity="center_vertical"
            android:text="@string/btn_Sale"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_sale_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="number"
            android:visibility="gone" />

        <TextView
            android:id="@+id/btn_product_shipment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:gravity="center_vertical"
            android:text="@string/btn_Shipment"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_shipment_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="number"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_product_delete"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"
        android:background="@android:color/holo_red_dark"
        android:gravity="center_vertical"
        android:text="@string/btn_Delete"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>